--- a/src/app/view/ventas/generar-venta/generar-venta.component.scss
+++ b/src/app/view/ventas/generar-venta/generar-venta.component.scss
@@ -16,6 +16,11 @@
     //left: 35px;
 }
 
+.nowrap {
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+
 .panel-contexto,
 .panel-productos,
 .panel-resumen {
