--- a/src/app/view/dashboard/graficos/grafico-pacientes-por-mes/grafico-pacientes-por-mes.component.scss
+++ b/src/app/view/dashboard/graficos/grafico-pacientes-por-mes/grafico-pacientes-por-mes.component.scss
@@ -1,6 +1,11 @@
 @use '../../../../../custom-theme.scss' as theme;
 
 
-.card-body{
+.card-body {
     //background: var(--degradado-pastel) !important;
+}
+
+.card {
+    min-height: 385px !important;
+    margin-bottom: 0px !important;
 }
