--- a/src/app/view/ventas/historial-ventas/historial-ventas.component.scss
+++ b/src/app/view/ventas/historial-ventas/historial-ventas.component.scss
@@ -167,3 +167,53 @@
 .btn-outline-primary .fecha-display {
     font-size: 0.85rem;
 }
+
+/* Media queries para zoom 125%+ */
+@media (max-width: 1536px) { /* 125% zoom aproximado */
+    .filtros-responsive .col-xl-1,
+    .filtros-responsive .col-xl-2,
+    .filtros-responsive .col-xl-3 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+
+@media (max-width: 1200px) { /* 150% zoom aproximado */
+    .filtros-responsive .col-xl-1,
+    .filtros-responsive .col-xl-2,
+    .filtros-responsive .col-xl-3 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    
+    .filtros-responsive .col-md-3,
+    .filtros-responsive .col-md-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+
+@media (max-width: 768px) { /* 200% zoom o móvil */
+    .filtros-responsive .col-6,
+    .filtros-responsive .col-md-3,
+    .filtros-responsive .col-md-6 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+/* Ajustes para zoom 125%+ */
+@media (max-width: 1400px) {
+    .filtros-responsive .col-md-4 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+
+/* Ajustes para zoom 150%+ o pantallas muy pequeñas */
+@media (max-width: 992px) {
+    .filtros-responsive .col-md-4 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
